@@ -11,6 +11,8 @@ gcc-10 (10.1.0-2) UNRELEASED; urgency=medium
     install location.
   * Don't require root for the temp installation of the offload compilers.
   * Use LLVM 10 for the amdgcn assembler and linker tools.
+  * Don't override the libstdc++ test results when running the libstdc++ abi
+    check.
 
   [ Nicolas Boulenguez ]
   * Enable gnat autopkg tests.
